<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGris"
   tools:context="com.appproccontact.recyclerView.DetailsJardinier">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">

     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="240dp"
         android:contentDescription="@string/text_log"
         android:src="@drawable/jardinier"
         android:layout_marginBottom="15dp"/>

     <TextView
         android:id="@+id/titleJar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/titleJar"
         android:textColor="@color/colorYellow1"
         android:textSize="40sp"
         android:textStyle="bold"
         app:layout_editor_absoluteX="170dp"
         app:layout_editor_absoluteY="395dp"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="142dp"
         tools:layout_editor_absoluteY="478dp" />

     <TextView
    android:id="@+id/adresseJar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/adressJar"
         android:layout_marginTop="30dp"
         android:layout_marginBottom="5dp"
    android:textColor="@color/colorWhite"
    android:textSize="17sp" />

     <TextView
         android:id="@+id/emailJar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/emailJar"
         android:textColor="@color/colorWhite"
         android:textSize="17sp" />

     <TextView
         android:id="@+id/telephoneJar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/telJar"
         android:textColor="@color/colorWhite"
         android:textSize="17sp" />

     <TextView
         android:id="@+id/descJar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:text="@string/descriptionJar"
         android:textColor="@color/colorWhite"
         android:textSize="20sp" />

     <Button
         android:id="@+id/Back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorYellow1"
         android:textColor="@color/colorBlack"
         android:layout_marginTop="20dp"
         android:textAllCaps="false"
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:text="@string/btnBack" />

 </LinearLayout>

</ScrollView>

    </LinearLayout>