<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGris"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.appproccontact.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAllCaps="true"
        android:textColor="@color/colorYellow1"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="Suspicious0dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/app_slogan"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />


    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorYellow1"
        android:text="@string/text_in"
        android:textColor="@color/colorBlack" />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@color/colorYellow1"
        android:gravity="center"
        android:text="@string/text_co"
        android:textColor="@color/colorBlack" />

    <TextView
        android:id="@+id/txStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:text="Passer cette étape"
        android:textColor="@color/colorWhite"
        tools:ignore="RtlHardcoded" />


</LinearLayout>